# cc2538-hal

./: Cargo.toml  README.md  memory.x
.cargo/: config
examples/: basic.rs
src/: bootloader.rs  lib.rs
