[package]
authors = ["Felipe Lalanne <felipe@lalanne.cl>"]
description = "Hardware Access Layer for CC2538 System-on-Chip"
keywords = ["no-std", "arm", "cortex-m", "cc2538", "embedded-hal"]
license = "MIT"
name = "cc2538-hal"
version = "0.1.0"
repository = "https://github.com/pipex/cc2538-hal"
edition = "2018"

[dependencies]
cortex-m = "0.5.8"
nb = "0.1.2"
cortex-m-rt = "0.6.5"
cc2538 = "0.2.0"
embedded-hal = "0.2.3"

[dev-dependencies]
panic-halt = "0.2.0"

[features]
rt = ["cc2538/rt"]

[profile.dev]
incremental = false
codegen-units = 1 # better optimizations

[profile.release]
codegen-units = 1 # better optimizations
debug = true # symbols are nice and they don't increase the size on Flash
lto = true # better optimizations
